--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ markdown-it-py==3.0.0
 markupsafe==2.1.5
 mdurl==0.1.2
 numpy==1.26.4
+opencv-python-headless
 packaging==24.0
 pandas==2.2.2
 pillow==10.3.0
