--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,6 @@
-numpy
-opencv_python
-streamlit
+numpy==2.2.4
+opencv_python==4.9.0.80
+streamlit==1.34.0
 streamlit_drawable_canvas==0.9.3
 tensorflow==2.15.0
 tensorflow_intel==2.15.0
