--- a/requirements.txt
+++ b/requirements.txt
@@ -4,198 +4,9 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-absl-py==2.2.2
-    # via
-    #   tensorboard
-    #   tensorflow-intel
-altair==5.5.0
-    # via streamlit
-astunparse==1.6.3
-    # via tensorflow-intel
-attrs==25.3.0
-    # via
-    #   jsonschema
-    #   referencing
-blinker==1.9.0
-    # via streamlit
-cachetools==5.5.2
-    # via
-    #   google-auth
-    #   streamlit
-certifi==2025.1.31
-    # via requests
-charset-normalizer==3.4.1
-    # via requests
-click==8.1.8
-    # via streamlit
-colorama==0.4.6
-    # via click
-flatbuffers==25.2.10
-    # via tensorflow-intel
-gast==0.6.0
-    # via tensorflow-intel
-gitdb==4.0.12
-    # via gitpython
-gitpython==3.1.44
-    # via streamlit
-google-auth==2.38.0
-    # via
-    #   google-auth-oauthlib
-    #   tensorboard
-google-auth-oauthlib==1.2.1
-    # via tensorboard
-google-pasta==0.2.0
-    # via tensorflow-intel
-grpcio==1.71.0
-    # via
-    #   tensorboard
-    #   tensorflow-intel
-h5py==3.13.0
-    # via tensorflow-intel
-idna==3.10
-    # via requests
-jinja2==3.1.6
-    # via
-    #   altair
-    #   pydeck
-jsonschema==4.23.0
-    # via altair
-jsonschema-specifications==2024.10.1
-    # via jsonschema
-keras==2.15.0
-    # via tensorflow-intel
-libclang==18.1.1
-    # via tensorflow-intel
-markdown==3.7
-    # via tensorboard
-markupsafe==3.0.2
-    # via
-    #   jinja2
-    #   werkzeug
-ml-dtypes==0.2.0
-    # via tensorflow-intel
-narwhals==1.34.1
-    # via altair
-numpy==1.26.4
-    # via
-    #   -r requirements.in
-    #   h5py
-    #   ml-dtypes
-    #   opencv-python
-    #   pandas
-    #   pydeck
-    #   streamlit
-    #   streamlit-drawable-canvas
-    #   tensorboard
-    #   tensorflow-intel
-oauthlib==3.2.2
-    # via requests-oauthlib
-opencv-python==4.11.0.86
-    # via -r requirements.in
-opt-einsum==3.4.0
-    # via tensorflow-intel
-packaging==24.2
-    # via
-    #   altair
-    #   streamlit
-    #   tensorflow-intel
-pandas==2.2.3
-    # via streamlit
-pillow==11.1.0
-    # via
-    #   streamlit
-    #   streamlit-drawable-canvas
-protobuf==4.25.6
-    # via
-    #   streamlit
-    #   tensorboard
-    #   tensorflow-intel
-pyarrow==19.0.1
-    # via streamlit
-pyasn1==0.6.1
-    # via
-    #   pyasn1-modules
-    #   rsa
-pyasn1-modules==0.4.2
-    # via google-auth
-pydeck==0.9.1
-    # via streamlit
-python-dateutil==2.9.0.post0
-    # via pandas
-pytz==2025.2
-    # via pandas
-referencing==0.36.2
-    # via
-    #   jsonschema
-    #   jsonschema-specifications
-requests==2.32.3
-    # via
-    #   requests-oauthlib
-    #   streamlit
-    #   tensorboard
-requests-oauthlib==2.0.0
-    # via google-auth-oauthlib
-rpds-py==0.24.0
-    # via
-    #   jsonschema
-    #   referencing
-rsa==4.9
-    # via google-auth
-six==1.17.0
-    # via
-    #   astunparse
-    #   google-pasta
-    #   python-dateutil
-    #   tensorboard
-    #   tensorflow-intel
-smmap==5.0.2
-    # via gitdb
-streamlit==1.44.1
-    # via
-    #   -r requirements.in
-    #   streamlit-drawable-canvas
-streamlit-drawable-canvas==0.9.3
-    # via -r requirements.in
-tenacity==9.1.2
-    # via streamlit
-tensorboard==2.15.2
-    # via tensorflow-intel
-tensorboard-data-server==0.7.2
-    # via tensorboard
+numpy==2.2.4
+opencv_python==4.9.0.80
+streamlit==1.34.0
+streamlit_drawable_canvas==0.9.3
 tensorflow==2.15.0
-    # via -r requirements.in
-tensorflow-estimator==2.15.0
-    # via tensorflow-intel
-tensorflow-intel==2.15.0
-    # via
-    #   -r requirements.in
-    #   tensorflow
-tensorflow-io-gcs-filesystem==0.31.0
-    # via tensorflow-intel
-termcolor==3.0.1
-    # via tensorflow-intel
-toml==0.10.2
-    # via streamlit
-tornado==6.4.2
-    # via streamlit
-typing-extensions==4.13.2
-    # via
-    #   altair
-    #   referencing
-    #   streamlit
-    #   tensorflow-intel
-tzdata==2025.2
-    # via pandas
-urllib3==2.4.0
-    # via requests
-watchdog==6.0.0
-    # via streamlit
-werkzeug==3.1.3
-    # via tensorboard
-wheel==0.45.1
-    # via astunparse
-wrapt==1.14.1
-    # via tensorflow-intel
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
+tensorflow_intel==2.15.0
