--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-numpy==1.23.5
-opencv_python==4.5.3.56
-streamlit==1.34.0
-streamlit_drawable_canvas==0.9.3
+numpy==1.24.3
+opencv-python==4.7.0.72
+streamlit==1.14.0
+streamlit-drawable-canvas==0.9.3
 tensorflow==2.15.0
