--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@
 #    pip-compile --output-file=requirements.txt requirements.in
 #
 numpy==1.24.3
-opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
 streamlit==1.14.0
 streamlit-drawable-canvas==0.9.3
 tensorflow==2.15.0
